chainsaw/tests/embedded-ingress-creation/testdata/broken-gslb-no-http.yaml
apiVersion: k8gb.io/v1beta1
kind: Gslb
metadata:
  name: embedded-ingress-creation-broken-no-http
spec:
  ingress:
    ingressClassName: nginx
    rules:
      - host: embedded-ingress-creation-broken-no-http.cloud.example.com
  strategy:
    type: failover
    primaryGeoTag: "eu"
