chainsaw/tests/embedded-ingress-creation/testdata/gslb.yaml
apiVersion: k8gb.io/v1beta1
kind: Gslb
metadata:
  name: embedded-ingress-creation
spec:
  ingress:
    ingressClassName: nginx
    rules:
      - host: embedded-ingress-creation-notfound.cloud.example.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: non-existing-app # Gslb should reflect NotFound status
                  port:
                    name: http
      - host: embedded-ingress-creation-unhealthy.cloud.example.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: unhealthy-app # Gslb should reflect Unhealthy status
                  port:
                    name: http
      - host: embedded-ingress-creation-healthy.cloud.example.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: frontend-podinfo
                  port:
                    name: http
  strategy:
    type: roundRobin
    dnsTtlSeconds: 5
